# sixwm

./: Cargo.toml  start-sixwm.sh
src/: main.rs  state.rs
src/handlers/: mod.rs  xdg_shell.rs
